[package]
name = "raki"
version = "0.1.1"
edition = "2021"
authors = ["Norimasa Takana <alignof@outlook.com>"]
description = "RISC-V instruction decoder written in Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
