[package]
name = "raki"
version = "0.1.3"
edition = "2021"
authors = ["Norimasa Takana <alignof@outlook.com>"]
repository = "https://github.com/Alignof/raki"
keywords = ["risc-v", "decoder"]
description = "RISC-V instruction decoder written in Rust."
license = "MIT"

[lints.clippy]
pedantic = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
