[package]
name = "raki"
version = "1.2.0"
edition = "2021"
authors = ["Norimasa Takana <alignof@outlook.com>"]
repository = "https://github.com/Alignof/raki"
keywords = ["risc-v", "decoder"]
categories = ["encoding", "embedded", "hardware-support", "no-std", "parsing"]
description = "RISC-V instruction decoder written in Rust."
license = "MIT"
readme = "README.md"

[lints.clippy]
pedantic = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
